--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name = "app_name">Info</string>
+    <string name = "app_name">Info</string><string name = "home">Home</string><string name = "group">Group</string><string name = "favorites">Favorites</string><string name = "account">Account</string>
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name = "hello_blank_fragment">Hello blank fragment</string>
 </resources>
